--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto"></ul>
             <span class="nav-item active">
-              <a class="nav-link" href="#">Chicken <span class="sr-only">(current) hidde</span></a>
+              <a class="nav-link" href="#chicken">Chicken <span class="sr-only">(current) hidde</span></a>
             </span>
             <span class="nav-item">
-              <a class="nav-link" href="#">Beef <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#Beef">Beef <span class="sr-only">(current)</span></a>
             </span>
             <span class="nav-item">
-                <a class="nav-link" href="#">Sushi <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#Sushi">Sushi <span class="sr-only">(current)</span></a>
             </span>
         </div>
       </nav>
