--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
 
   </style>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">FOOD,LLC</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">FOOD, LLC</a>
+        <button id="idbutton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto"></ul>
-            <span class="nav-item active">
-              <a class="nav-link" href="#chicken">Chicken <span class="sr-only">(current) hidde</span></a>
-            </span>
-            <span class="nav-item">
-              <a class="nav-link" href="#Beef">Beef <span class="sr-only">(current)</span></a>
-            </span>
-            <span class="nav-item">
-                <a class="nav-link" href="#Sushi">Sushi <span class="sr-only">(current)</span></a>
-            </span>
+          <ul class="navbar-nav mr-auto d-block d-sm-none">
+            <li class="nav-item">
+              <a class="nav-link text-center" href="#chiken">Chiken</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-center" href="#beeef">Beef</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-center" href="#sushi">Sushi</a>
+            </li>
+          </ul>
         </div>
       </nav>
       <div id="main-cotent"class="cointainer">
